Change log for Defense Condition game project

Author(s): Ray Gardener (support@daylongraphics.com)
Repository: https://github.com/RayOfDaylon/Defcon
September 9, 2023


Finished the new "Humans" readout on the stats panel, 
which shows safe humans as green squares, abducted humans 
as red squares. The number of squares decreases as 
humans are killed.

Arena bog down slowest time factor increased from 0.5 to 0.67; 
things got a little too slow when using smart bombs to clear dense areas.

Current mission and god mode moved from game instance to game match.

Player ship, humans, smartbomb count, and score (XP) 
moved from CDefconGameInstance to new Defcon::CGameMatch class.
Those items only exist during a match and weren't supposed 
to be part of CDefconGameInstance which represents 
the entire game application.

Arena bog down preference supported more smoothly and 
only by checking debris count. Easy way to test is 
to detonate a smartbomb amid a dense group of enemies.

Attempting to detonate a smart bomb when none are 
available produces a message and plays the invalid selection sound.

Pressing Tab in the game over screen skips ahead to 
introducing the stats, to finish introducing them, 
and then to return to the main menu.

Added flashing alert widget to status panel which 
appears when a human is being abducted.

Added sprite atlas for reformer enemy on Details screen.

Added player ship to Details screen.

Bullet time feature added (press B). This will probably 
be only for debugging and unavailable in Shipping builds.

Pause feature added (press P).

Added sprite atlas for ghost enemy on Details screen.

Stars are occluded by terrain. (arcade mismatch) The arcade game 
simply didn't draw stars below the max terrain elevation, 
presumably to save CPU cycles by not viz-testing every frame.

Background starfield doesn't require two circumnavigations 
to sync the field to the terrain, only one as expected.
