@@ -1,0 +1,8 @@
+// Defcon - a Defender Stargate clone developed with Unreal Engine.
+// Copyright 2003-2023 Daylon Graphics Ltd. All Rights Reserved.
+
+
+#include "MessageMediator.h"
+
+Defcon::CMessageMediator Defcon::GMessageMediator;
+
